--- a/main/templates/portfolio_show.html
+++ b/main/templates/portfolio_show.html
@@ -38,7 +38,7 @@
     <div class="tab-content">
         <div class=" active" id="portfolio">
             
-            <form class="form" action="#" method="post" >{% csrf_token %}
+            <form class="form" action="{% url 'main:send_request' %}" method="post" >{% csrf_token %}
                 <div class="col-xl-6 col-sm-12">
                     
                     <div class="form-group">
@@ -127,18 +127,12 @@
                     </div>
                 </div>
                 <div class="form-group">          
-                    <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12">                             
-                        <button class="btn btn-lg btn-success col-12 m-b-20" type="submit">Отправить приглашение</button>    
+                    <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12">
+                        <input hidden type="text" value="{{student.id}}" name="student_id">                             
+                        <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" type="submit">Отправить приглашение</button>    
                     </div>                                                            
                 </div>
             </form>
         </div><!--/-->                            
     </div><!--/tab-content-->
-{%endblock%}
-  
-
-
-
-
-
-                                                      
+{%endblock%}                                               
