--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -49,11 +49,11 @@
         <div class="">
           {%if blocks%}
             {% for block in blocks %}
+            {% if request.session.role == "employer"%}
                 <div class="form-group">
                   <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12">
                     <div class="card shadow-sm x-shadow-fade-in">
                       <img src="{{block.img_url}}" class="achivement-img" alt="">
-                      {% if request.session.role == "employer"%}
                         <div class="achivement-div p-t-10 p-b-10 p-r-10 p-l-10">
                           <h2 class="achive-title">{{block.fullname}}</h2>
                           <div class="inline-text m-t-10">
@@ -76,15 +76,28 @@
                             <h4 class="important-text">Год рождения: </h4>
                             <h4>{%if block.date_of_birth%}{{block.date_of_birth|date:"Y-m-d"}}{%else%} не указано{%endif%}</h4>
                           </div>
-
                         </div>
                         <a href="{%url 'main:portfolio_show' block.id%}" class="absolute-link"></a>
-                      {%elif request.session.role == "student"%}
-                        Тут нужно выводить вакансии
-                      {%endif%}
                     </div>
                   </div>
                 </div>
+            {%elif request.session.role == "student"%}
+                <div class="form-group">
+                  <div class="wrap-input100 validate-input m-b-16 col-md-2 col-sm-12">
+                    <div class="card shadow-sm x-shadow-fade-in">
+                      <img src="{{block.owner.img_url}}" class="achivement-img" alt="">
+                        <div class="achivement-div p-t-10 p-b-10 p-r-10 p-l-10">
+                          <h2 class="achive-title">{{block.title}}</h2>
+                          <div class="inline-text m-t-10">
+                            <h4 class="important-text">Зарплата: </h4>
+                            <h4>{{block.salary}}</h4>
+                          </div>
+                        </div>
+                        <a href="{%url 'main:vacancy_show' block.id%}" class="absolute-link"></a>
+                    </div>
+                  </div>
+                </div>
+            {%endif%}
             {% endfor %}
           {%else%}
                 <h2 class="important-text" style="margin:30px auto;text-align:center;">Ничего не найдено!</h2>
