--- a/main/templates/message.html
+++ b/main/templates/message.html
@@ -2,4 +2,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body class="center-div">
     <h1 class="login100-form-title p-b-51">{{text}}</h1> <br/>
+    <div class="row">
+        <div class="col-12">
+            <a class="important-text" style="margin:30px auto;text-align:left;" href="{% url 'main:index' %}">На главную</a>
+        </div>
+    </div>
 </body>
