--- a/main/templates/portfolio_show.html
+++ b/main/templates/portfolio_show.html
@@ -124,14 +124,27 @@
                             <h1 class="resume-title inherit-style">Резюме</h1>                           
                             <textarea disabled  id="resume" class="resume" rows="10">{{student.about}}</textarea>
                         </div>
+
+
+                        <br><br>
+
+                        <input hidden type="text" value="{{student.id}}" name="student_id">
+                        <p>Выберите вакансию, чтобы пригласить студента на собеседование:
+                        <select name="vacancy_id">
+                            {% for vacancy in vacancies %}
+                                <option value="{{vacancy.id}}">{{vacancy}}</option>
+                            {% endfor %}
+                        </select>   
+                    </p>      
+                        <br>       
+                        <br>           
+                        <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" type="submit">Отправить приглашение на почту</button>
                     </div>
                 </div>
-                <div class="form-group">          
+         
                     <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12">
-                        <input hidden type="text" value="{{student.id}}" name="student_id">                             
-                        <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" type="submit">Отправить приглашение</button>    
+                            
                     </div>                                                            
-                </div>
             </form>
         </div><!--/-->                            
     </div><!--/tab-content-->
