--- a/main/templates/vacancy_show.html
+++ b/main/templates/vacancy_show.html
@@ -10,38 +10,32 @@
 {% block active_portfolio_block1 %}active{% endblock %}
 
 {%block tab_content%}
+<div class="row">
+<div class="col-3">
+    <img src="{{vacancy.owner.img_url}}" class="achivement-img mgt-50" alt="">
+        <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0 mgt-20">                                           
+            <div class="card shadow-sm x-shadow-fade-in">
+                <div type="text" class="input100 p-t-10">
+                    <span style="float:left">Работодатель:&emsp; </span> <h3  style="float:left">{{vacancy.owner.fullname}}</h3>
+                </div>
+                <span class="focus-input100"></span>
+            </div>                                            
+        </div>
+        <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0 mgt-10">                                           
+            <div class="card shadow-sm x-shadow-fade-in">
+                <div class="input100 p-t-10">
+                    <span style="float:left">Опубликовано:&emsp;</span> <h3  style="float:left" style="float:left"> {{vacancy.pub_date}}</h3>
+                </div>
+                <span class="focus-input100"></span>
+            </div>                                            
+        </div>
+</div>
+<div class="col-9">
     <h1  class="important-text" style="margin:30px auto;text-align:left;">{{vacancy.title}}</h1>
     <h3  class="important-text" style="margin:30px auto;text-align:left; color:green">{{vacancy.salary}} тенге</h3>
     <div class="tab-content">
         <div class=" active" id="portfolio">
-            
             <form class="form" action="{% url 'main:apply_vacancy' %}" method="post" >{% csrf_token %}
-                <div class="col-xl-6 col-sm-12">
-                    <div class="form-group">
-                        
-                        <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0">                                           
-                            <div class="card shadow-sm x-shadow-fade-in">
-                                <div type="text" name="university" class="input100 p-t-10"  id="university" value="" placeholder="Университет" title="Название университета">
-                                    <span style="float:left">Работодатель:&emsp; </span> <h3  style="float:left">{{vacancy.owner.fullname}}</h3>
-                                </div>
-                                <span class="focus-input100"></span>
-                            </div>                                            
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-6 col-sm-12">
-                    <div class="form-group">
-                        <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 p-0">                                           
-                            <div class="card shadow-sm x-shadow-fade-in">
-                                <div class="input100 p-t-10"  id="date_of_birth">
-                                    <span style="float:left">Опубликовано:&emsp;</span> <h3  style="float:left" style="float:left"> {{vacancy.pub_date}}</h3>
-                                </div>
-                                <span class="focus-input100"></span>
-                            </div>                                            
-                        </div>
-                    </div>
-                </div>
                 <div class="form-group">
                     <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 relative">                 
                         <div class="card shadow-sm x-shadow-fade-in">
@@ -50,13 +44,30 @@
                         </div>
                     </div>
                 </div>
+
+                {% if request.session.role == "student"%}
+
                 <div class="form-group">          
                     <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12">
                         <input hidden type="text" value="{{vacancy.id}}" name="vacancy_id">                            
                         <button id="sendRequestBtn" class="btn btn-lg btn-success col-12 m-b-20" type="submit">Откликнуться</button>    
                     </div>                                                            
                 </div>
+
+                {% elif request.session.role == "employer" %}
+                <h5 class="login100-form-title p-b-51">Откликнувшиеся студенты:</h5>
+                    {% for vacancy in applied_vacancies %}
+                        <div class="card shadow-sm x-shadow-fade-in">
+                            <div type="text" class="input100 p-t-10">
+                                <span style="float:left">{{vacancy.student.fullname}}</span>
+                            </div>
+                            <span class="focus-input100"></span>
+                        </div>
+                    {% endfor %}
+                {% endif %}
             </form>
         </div><!--/-->                            
     </div><!--/tab-content-->
+</div>
+</div>
 {%endblock%}                                               
