можно открыть свои вакансии

--- a/main/templates/profile_my_vacancies.html
+++ b/main/templates/profile_my_vacancies.html
@@ -34,6 +34,7 @@
                                     </div>
                                     {% endif %}
                                 </div>
+                                <a href="{%url 'main:vacancy_show' vacancy.id%}" class="absolute-link"></a>
                             </div>
                         </div>
                     </div>    
