--- a/main/templates/employer_profile.html
+++ b/main/templates/employer_profile.html
@@ -52,7 +52,7 @@
                     </div>
                 <div class="form-group">
                     
-                    <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 relative">                 
+                    <div class="wrap-input100 validate-input m-b-16 col-xl-12 col-sm-12 relative p-0">                 
                         <div class="card shadow-sm x-shadow-fade-in">
                             <h1 class="resume-title inherit-style">Описание</h1>                           
                             <textarea placeholder="Информация о вакансии" name="resume"  id="resume" class="resume" rows="10">{{user.description}}</textarea>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="form-group">          
-                    <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12">                             
+                    <div class="wrap-input100 validate-input m-b-16 col-xl-3 col-sm-12 p-0">                             
                         <button class="btn btn-lg btn-success col-12 m-b-20" type="submit">Сохранить</button>    
                     </div>                                                            
                 </div>
