--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -40,7 +40,7 @@
 					<div class="flex-sb-m w-full p-t-3 p-b-24">
 						<div>
 							<a href="{%url 'main:register'%}" class="txt1">
-								Забыли пароль? Регистрация
+								Нет аккаунта? Регистрация
 							</a>
                         </div>
 					</div>
